# todo_backend

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Dockerfile  README.md  alembic.ini  chat_import_error.txt  check_db_debug.py  check_db_direct.py  check_db_sync.py  check_gemini_model.py  check_import.py  check_modules.py  check_tool_type.py  cleanup_debug.py  comprehensive_test.py  debug_import.py  final_check.py  force_create_tables.py  install_agents.bat  install_log_full.txt  install_out.txt  install_pkg.py  list_routes.py  manual_init_db.py  openapi.yaml  pip_list.txt  pip_list_new.txt  ps_out.txt  pyproject.toml  requirements.txt  script_out.txt  test_agent.py  test_agent_direct.py  test_chat_import.py  test_list_tasks.py  verify_agent_config.py  verify_out_2.txt
alembic/: env.py
alembic/versions/: 001_add_conversation_message_models.py
docs/: better_auth_integration.md
scripts/: create_initial_migration.py  run_migrations.py  setup_db.py  setup_db_with_seed.py  test_seed.py
src/: __init__.py  config.py  database.py  main.py
src/api/: auth.py  chat.py  tasks.py
src/auth/: better_auth_integration.py  better_auth_server.py
src/database/: README.md  __init__.py  connection.py  init_db.py  seed_db.py
src/mcp_server/: tools.py
src/models/: __init__.py  conversation.py  message.py  task.py  token_blacklist.py  user.py
src/routers/: __init__.py  auth.py  tasks.py
src/services/: auth.py  (+3 more)
tests/: conftest.py  test_auth.py  test_auth_endpoints.py  test_chat_api.py  test_database_connection.py  test_health.py  test_tasks.py
(+2 files in other folders)
