[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-ai-chatbot-backend"
version = "0.1.0"
description = "Backend for the Todo AI Chatbot using FastAPI, OpenAI Agents, and MCP Server"
authors = [{name = "Developer", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.54.4",
    "anthropic[mcp]>=0.35.0",
    "sqlmodel>=0.0.22",
    "asyncpg",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.7.0",
    "bcrypt>=4.0.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "cryptography>=43.0.1",
    "python-dotenv>=1.0.1",
    "PyJWT>=2.8.0",
    "psycopg[binary]>=3.2.3",
    "greenlet",
    "alembic>=1.13.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"